# worth-my-time

./: .gitignore  README.md  config.yaml  pyproject.toml
prompts/: triage_prompt.md
scripts/: com.wmt.plist.template  install_deps.sh  install_launchd.sh  uninstall_launchd.sh
src/wmt/: __main__.py  bookmarks.py  cli.py  codex_runner.py  config.py  fetch.py  logging_setup.py  pipeline.py  publish.py  stable.py  state.py  triage_output.py  triage_prompt.py  urls.py  util.py  watcher.py  youtube_metadata.py  youtube_transcripts.py
src/wmt/prompts/: triage_prompt.md
src/wmt/publishers/: __init__.py  base.py  hackmd.py
tests/: test_bookmarks.py  test_cli_args.py  test_codex_runner_args.py  test_config_hackmd.py  test_stable.py  test_state.py  test_urls.py
